2003-07-07  Jody Goldberg <jody@gnome.org>

	* Release 2.3.4

2003-06-24  Jody Goldberg <jody@gnome.org>

	* Release 2.3.3

2003-06-15  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: fix server.in generation (fixes property page showing)

2003-06-06  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: fix from Rajkumar Sivasamy (originally for control-
	center) for extracting themes under default solaris install. WE NEED
	VFS SUPPORT FOR ARCHIVES! ;-)

2003-06-03  Andrew Sobala  <aes@gnome.org>

	* themus-properties-view.c: fix description word wrapping 
	* theme-method.c: gcc 2.x compile

2003-05-13  Andrew Sobala  <aes@gnome.org>

	* Moved to control-center.

2003-05-04  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: (do_open): fix pointer juggling that was causing
	nautilus crashes. Oops again.

2003-05-04  Andrew Sobala  <aes@gnome.org>

	* theme-method.c: (do_close): remove some g_free s that were causing
	nautilus to hang. Oops.

2003-04-22  Andrew Sobala  <aes@gnome.org>

	* theme-method.conf: removed .so extension as per Christophe Fergeau's
	comments

2003-03-30  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: added themus.keys to DISTCLEAN

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* .cvsignore: updated

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: make the .keys file install properly
	* themus.keys.in: add _category

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: fix cleaning of server.in files

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* Makefile.am: added new component build stuff
	* Themus_Component.server.in.in: added
	* themus-component-main.c: (image_shlib_make_object): added
	* themus-component.c: (impl_Bonobo_Listener_event),
	(themus_component_class_init), (themus_component_init): added
	* themus-component.h: added

2003-03-29  Andrew Sobala  <aes@gnome.org>

	* themus-properties-view.c: (load_location), (do_table_attach),
	(themus_theme_properties_view_init): add description field
