@@ -1,3 +1,8 @@
+2003-07-20  Andrew Sobala  <aes@gnome.org>
+
+	* themus-component.c: (impl_Bonobo_Listener_event): apply
+	fonts (fixes: #109543)
+
 2003-07-07  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.3.4
